fixed showing routes on mobile

--- a/client/src/components/components-styles/RoutesCard.scss
+++ b/client/src/components/components-styles/RoutesCard.scss
@@ -3,7 +3,8 @@
 	border-radius: 2px;
 	margin-top: 3px;
 	// outline: 1px solid rgba(100, 100, 100, 0.2);
-	z-index: 25;
+	z-index: 106;
+	position: relative;
 }
 
 .button-active {
